--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
      <h3 class="bundb">im Bed and Breakfast an der Wutachschlucht!</h3>
 
     <div class="beschreibungstext">
-      <p>
         <div class="beschreibungstext1">Liebe Gäste,</div>
         <div class="beschreibungstext2">Wir heißen Sie herzlich Willkommen in unserem idylischen Bed & Breakfast im Schwarzwald!</div>
         <div class="beschreibungstext3">Unser kleines familiengeführtes Hotel ist der perfekte Ort für einen erholsamen Urlaub inmitten einer wunderschönen Naturlandschaft.<div>Genießen Sie den Komfort unserer gemütlichen Zimmer, die mit allem ausgestattet sind, was Sie für einen angenehmen Aufenthalt benötigen.</div>Jeden Morgen bereiten wir Ihnen ein reichhaltiges Frühstück zu, damit Sie gestärkt in den Tag starten können.</div>
-        <div class="beschreibungstext4">Erkunden Sie die Umgebung bei ausgedehnten Spaziergängen oder Wanderungen durch den Schwarzwald.</div></div>
+        <div class="beschreibungstext4">Erkunden Sie die Umgebung bei ausgedehnten Spaziergängen oder Wanderungen durch den Schwarzwald.</div>
         <div class="beschreibungstext5">Unser freundliches Team steht Ihnen jederzeit mit Rat und Tat zur Seite und sorgt dafür, dass Sie sich wie zu Hause fühlen.<div>Wir freuen uns auf Sie!</div></div>
         <div class="teamgruss">Ihr B & B Wutachschlucht Team</div>
-      </p>
   </div>
 
 <div class="galerie">
